promoted WriteModelRepository to myeslib3-core module